--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.2"
   }
 }
