--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
@@ -18,7 +19,10 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.4",
+    "sharp": "^0.32.5",
     "slugify": "^1.6.6"
   }
 }
